[gd_scene load_steps=4 format=3 uid="uid://cmex6wp7ewj41"]

[ext_resource type="PackedScene" uid="uid://bmtakdh44464q" path="res://core/scenes/menus/main_menu/main_menu.tscn" id="1_kx65a"]
[ext_resource type="Script" uid="uid://dqhoas3fswheu" path="res://scenes/menus/main_menu/main_menu.gd" id="2_flk2s"]
[ext_resource type="Script" uid="uid://xk6tdr6km1i4" path="res://scripts/login_manager.gd" id="3_gm7d7"]

[node name="MainMenu" instance=ExtResource("1_kx65a")]
script = ExtResource("2_flk2s")
game_scene_path = "uid://7qt1dp4hjbjs"
options_packed_scene = null

[node name="Login Button" type="Button" parent="MenuContainer/MenuButtonsMargin/MenuButtonsContainer/MenuButtonsBoxContainer" index="4"]
unique_name_in_owner = true
layout_mode = 2
text = "Google Login"

[node name="HTTPRequest" type="HTTPRequest" parent="." index="5"]

[node name="LoginManager" type="Node" parent="." index="6"]
script = ExtResource("3_gm7d7")

[connection signal="pressed" from="MenuContainer/MenuButtonsMargin/MenuButtonsContainer/MenuButtonsBoxContainer/Login Button" to="LoginManager" method="start_login_flow"]
[connection signal="login_failed" from="LoginManager" to="." method="_on_login_manager_login_failed"]
[connection signal="login_succeeded" from="LoginManager" to="." method="_on_login_manager_login_succeeded"]
